hook up chromium review queue

--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,7 @@
         <div>Chromium Review Nickname: <input type="text" id="review-nick">
         </input></div>
         <div id="feed-info">
+            <div id="chromium-queued-title">Chromium: <span id="chromium-current-queued"></span></div>
             <div id="queued-title">Queued: <span id="current-queued"></span></div>
             <div id="pending-title">Pending: <span id="current-pending"></span></div>
             <div id="landed-title">Landed: <span id="current-landed"></span></div>
