--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,9 @@
     </head>
     <body>
         <div id="progress"></div>
-        <div>Latest Webkit roll @ <span id="webkit-version"></span></div>
+        <div>Latest Webkit roll is r<span id="webkit-version"></span>
+            <span id="webkit-behind">
+        </div>
         <button id="refresh-button">Refresh</button>
         
         <div>WebKit email: <input type="text" id="changelog-name">
