lots of improvements - auto-reloading, more chromium commit queue stuff, etc

--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <script src="jquery.min.js"> </script>
+        <script src="linkify.js"> </script>
         <script src="shared.js"> </script>
         <script src="popup.js"> </script>
         <link rel="stylesheet" href="popup.css" type="text/css">
@@ -16,10 +17,10 @@
         <div>Chromium Review Nickname: <input type="text" id="review-nick">
         </input></div>
         <div id="feed-info">
-            <div id="chromium-queued-title">Chromium: <span id="chromium-current-queued"></span></div>
-            <div id="queued-title">Queued: <span id="current-queued"></span></div>
-            <div id="pending-title">Pending: <span id="current-pending"></span></div>
-            <div id="landed-title">Landed: <span id="current-landed"></span></div>
+            <div id="chromium-queue-title">Chromium: <span class="current-queue"></span></div>
+            <div id="webkit-queue-title">Webkit Queue: <span class="current-queue"></span></div>
+            <div id="webkit-pending-title">Webkit Pending: <span class="current-pending"></span></div>
+            <div id="webkit-landed-title">Webkit Landed: <span class="current-landed"></span></div>
             <a id="feed-jump"></a>
             <div id="checkins">
                 <div id="checkin-table-wrap">
