--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,8 @@
     </head>
     <body>
         <div id="progress"></div>
-        <div>Latest Webkit roll @ <span id="webkit-version"></span></div>
+        <div>Latest Webkit roll: r<span id="webkit-version"></span></div>
+        <div>Chromium LKGR: r<span id="chromium-lkgr"></span></div>
         <button id="refresh-button">Refresh</button>
         
         <div>WebKit email: <input type="text" id="changelog-name">
