get chromium version for webkit roll

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,8 @@
     </head>
     <body>
         <div id="progress"></div>
-        <div>Latest Webkit roll: r<span id="webkit-version"></span></div>
+        <div>Latest Webkit roll: r<span id="webkit-version"></span>
+            in chromium r<span id="chromium-webkit-version"></span></div>
         <div>Chromium LKGR: r<span id="chromium-lkgr"></span></div>
         <button id="refresh-button">Refresh</button>
         
