--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="jquery.min.js"> </script>
+        <script src="jquery-1.8.0.min.js"> </script>
+        <script src="jquery.color.js"> </script>
         <script src="linkify.js"> </script>
         <script src="shared.js"> </script>
         <script src="popup.js"> </script>
