--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,7 @@
         <div>Latest Webkit roll: r<span id="webkit-version"></span>
             in chromium r<span id="chromium-webkit-version"></span></div>
         <div>Chromium LKGR: r<span id="chromium-lkgr"></span></div>
+        <div>WebKit gardeners: <span id="webkit-gardeners"></span></div>
         <button id="refresh-button">Refresh</button>
         
         <div>WebKit email: <input type="text" id="changelog-name">
