--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,9 @@
 <html>
     
     <head>
+        <script type="text/javascript"
+                src='https://www.google.com/jsapi?autoload={"modules":[{"name":"visualization","version":"1","packages": ["corechart"]}]}'>
+        </script>
         <script src="jquery-1.8.0.min.js"> </script>
         <script src="jquery.color.js"> </script>
         <script src="linkify.js"> </script>
