update to blink

--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <div id="progress"></div>
-        <div>Latest Webkit roll: r<span id="webkit-version"></span>
+        <div>Latest Blink roll: r<span id="webkit-version"></span>
             in chromium r<span id="chromium-webkit-version"></span></div>
         <div>Chromium LKGR: r<span id="chromium-lkgr"></span></div>
         <div>WebKit gardeners: <span id="webkit-gardeners"></span></div>
