--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,7 @@
         </script>
         <script src="jquery-1.8.0.min.js"> </script>
         <script src="jquery.color.js"> </script>
+        <script src="q.js"> </script>
         <script src="linkify.js"> </script>
         <script src="shared.js"> </script>
         <script src="popup.js"> </script>
